--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src ="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.2/socket.io.js" integrity="sha512-iZIBSs+gDyTH0ZhUem9eQ1t4DcEn2B9lHxfRMeGQhyNdSUz+rb+5A3ummX6DQTOIs1XK0gOteOg/LPtSo9VJ+w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
 </head>
+<style>
+    .showMessages{
+        width:500px;
+        height:100vh;
+        border: 1px solid #dadada;
+    }
+    .showMessages .mright { 
+        position: relative;
+        background: white;
+        text-align: right;
+        padding: 5px 15px;
+        border-radius: 6px;
+        border: 1px solid #ccc;
+        float: right;
+        right: 10px; 
+    }
+    .showMessages .mleft { position: relative;
+        background: white;
+        text-align: left;
+        padding: 5px 10px;
+        border-radius: 6px;
+        border: 1px solid #ccc;
+        float: left;
+        left: 10px; }
+</style>
 <body>
 
     <input type="text" class= "message">
     <button onclick= "sendMessage()" >Send Message</button>
-    <h1></h1>
-
-    <script> 
-
-
-        const socket = io('http://localhost:3000')
-
-        socket.on('connection')
+    <h1>Messages<br/></h1>
+    <div class="showMessages"></div>
 
 
-        socket.on('message', (data) => {
-            document.queryselector('h1').innerHTML = data
-        })
-        const sendMessage = () => {
-            const messageInput = document.querySelector('.message')
-            const message = messageInput.value
-            socket.emit('message',message)
-        }
-
-    </script>
-    
+    <script src='/js/message.js'></script>
 </body>
 </html>
